--- a/IrisClassifier.ipynb
+++ b/IrisClassifier.ipynb
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "48d894ff",
    "metadata": {},
    "outputs": [],
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "id": "835aa9b5",
    "metadata": {},
    "outputs": [
@@ -710,7 +710,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "3390f696",
    "metadata": {},
    "outputs": [
@@ -729,7 +729,7 @@
     "plt.figure(figsize=(8, 6))\n",
     "sns.heatmap(df.iloc[:, :-2].corr(), annot=True, cmap='coolwarm')\n",
     "plt.title(\"Feature Correlation of Iris-Dataset\")\n",
-    "plt.show()\n"
+    "plt.show()"
    ]
   }
  ],
